--- a/html/menu.html
+++ b/html/menu.html
@@ -7,8 +7,20 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/menu.css">
     <link rel="stylesheet" href="../css/universe.css">
+    <style>
+        #particle-trail {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 1000;
+        }
+    </style>
 </head>
 <body>
+    <canvas id="particle-trail"></canvas>
     <div class="sun"></div>
     <div class="moon"></div>
     <div class="stars"></div>
@@ -62,6 +74,64 @@
                 star.style.animationDelay = `${Math.random() * 2}s`;
                 starsContainer.appendChild(star);
             }
+        });
+    </script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const canvas = document.getElementById('particle-trail');
+            if (!canvas) return;
+
+            const ctx = canvas.getContext('2d');
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+
+            let particles = [];
+            const mouse = { x: null, y: null };
+
+            window.addEventListener('mousemove', (event) => {
+                mouse.x = event.clientX;
+                mouse.y = event.clientY;
+                // Crear 2 partículas en cada movimiento para un rastro suave
+                for (let i = 0; i < 2; i++) {
+                    particles.push(new Particle());
+                }
+            });
+
+            window.addEventListener('resize', () => {
+                canvas.width = window.innerWidth;
+                canvas.height = window.innerHeight;
+            });
+
+            class Particle {
+                constructor() {
+                    this.x = mouse.x;
+                    this.y = mouse.y;
+                    this.size = Math.random() * 2.5 + 1;
+                    this.speedX = Math.random() * 3 - 1.5;
+                    this.speedY = Math.random() * 3 - 1.5;
+                    this.color = `hsl(${hue + Math.random() * 30 - 15}, 100%, 70%)`;
+                }
+                update() {
+                    this.x += this.speedX;
+                    this.y += this.speedY;
+                    if (this.size > 0.1) this.size -= 0.04;
+                }
+                draw() {
+                    ctx.fillStyle = this.color;
+                    ctx.beginPath();
+                    ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
+                    ctx.fill();
+                }
+            }
+
+            function handleParticles() {
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                particles = particles.filter(p => p.size > 0.1);
+                particles.forEach(p => { p.update(); p.draw(); });
+                requestAnimationFrame(handleParticles);
+            }
+
+            handleParticles();
         });
     </script>
 </body>
