--- a/html/boutique.html
+++ b/html/boutique.html
@@ -5,26 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boutique Magique</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/boutique.css">
+    <link rel="stylesheet" href="../css/feedback-system.css">
     <link rel="stylesheet" href="../css/header-footer.css">
+    <link rel="stylesheet" href="../css/boutique.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@600;700;900&family=Nunito:wght@600;800&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="boutique-body">
     <header data-lena-header></header>
 
     <div id="magic-shop-container">
         <canvas id="magic-particles"></canvas>
-        
+
+        <button id="btnVolver" type="button" class="btn-secondary btn-back">
+            <span aria-hidden="true">&#8592;</span>
+            <span>Retour au menu</span>
+        </button>
+
         <div class="shop-header">
-            <h1>✨ Boutique Magique ✨</h1>
-            <p>Collectionne des trésors et personnalise ton aventure !</p>
+            <h1>🌟 Boutique Magique 🌟</h1>
+            <p>Collectionne des trésors scintillants et personnalise ton aventure !</p>
         </div>
 
         <!-- Marché Rare -->
         <div class="shop-section rare-market">
-            <h2>🌟 Marché Rare 🌟</h2>
+            <h2>✨ Marché Rare ✨</h2>
             <div id="rare-items-container" class="items-grid">
                 <!-- Les objets rares sont insérés ici -->
             </div>
@@ -32,7 +38,7 @@
 
         <!-- Boutique Principale -->
         <div class="shop-section">
-            <h2>🦄 Boutique Principale 🦄</h2>
+            <h2>🎀 Boutique Principale 🎀</h2>
             <div id="shop-items-container" class="items-grid">
                 <!-- Les objets normaux sont insérés ici -->
             </div>
@@ -40,7 +46,7 @@
 
         <!-- Mes Trésors -->
         <div class="shop-section my-treasures">
-            <h2>💖 Mes Trésors 💖</h2>
+            <h2>🌈 Mes Trésors 🌈</h2>
             <div id="my-treasures-container" class="items-grid">
                 <!-- Les objets achetés sont insérés ici -->
             </div>
@@ -50,6 +56,7 @@
     <audio id="buy-sound" src="../assets/sounds/correct.wav"></audio>
 
     <script src="../js/audioManager.js"></script>
+    <script src="../js/feedbackSystem.js" defer></script>
     <script src="../js/appShell.js" defer></script>
     <script src="../js/avatarData.js"></script>
     <script src="../js/storage.js"></script>
@@ -58,6 +65,3 @@
     <script src="../js/boutique.js"></script>
 </body>
 </html>
-
-
-
