--- a/html/juego.html
+++ b/html/juego.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
     <title>Appli de Léna — Jeu 🦄</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/juego.css">
+    <link rel="stylesheet" href="../css/feedback-system.css">
     <link rel="stylesheet" href="../css/dictee.css">
     <link rel="stylesheet" href="../css/ecriture-cursive.css">
     <link rel="stylesheet" href="../css/header-footer.css">
+    <link rel="stylesheet" href="../css/juego.css">
     <link rel="stylesheet" href="../css/abaque-magique.css">
     <link rel="stylesheet" href="../css/theme-unicorn.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -101,6 +102,8 @@
     </div>
   </div>
 
+  <footer data-lena-footer></footer>
+
   <script src="https://cdn.jsdelivr.net/npm/tsparticles-confetti@2.12.0/tsparticles.confetti.bundle.min.js"></script>
   <script src="../games/gameData.js"></script>
   <script src="../games/puzzlemagique.js"></script>
@@ -122,6 +125,7 @@
     <script src="../js/ecriture-cursive.js"></script>
   <script src="../js/abaque-magique.js"></script>
   <script src="../js/audioManager.js"></script>
+  <script src="../js/feedbackSystem.js" defer></script>
   <script src="../js/appShell.js" defer></script>
   <script src="../js/mcqEngine.js"></script>
   <script src="../js/avatarData.js"></script>
@@ -302,7 +306,6 @@
 
 
 
-  <footer data-lena-footer></footer>
 
 
 
