--- a/html/login.html
+++ b/html/login.html
@@ -6,7 +6,7 @@
     <title>Appli de Léna - Bienvenue !</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/login.css">
-    <link rel="stylesheet" href="../css/header-footer.css">
+    <link rel="stylesheet" href="../css/feedback-system.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@600;700;900&family=Nunito:wght@600;800&display=swap" rel="stylesheet">
@@ -121,7 +121,7 @@
     <div class="login-fireflies" aria-hidden="true">
         <span></span><span></span><span></span><span></span>
     </div>
-    <script src="../js/audioManager.js"></script>
+    <script src="../js/feedbackSystem.js" defer></script>
     <footer data-lena-footer></footer>
     <script src="../js/appShell.js" defer></script>
     <script src="../js/avatarData.js"></script>
@@ -129,3 +129,5 @@
     <script src="../js/login.js"></script>
 </body>
 </html>
+
+
