--- a/html/menu.html
+++ b/html/menu.html
@@ -6,7 +6,7 @@
     <title>Menú Principal - MathsWebLena</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/menu.css">
-    <link rel="stylesheet" href="../css/universe.css">
+    <link rel="stylesheet" href="../css/feedback-system.css">
     <style>
         #particle-trail {
             position: fixed;
@@ -55,8 +55,7 @@
 
         <p class="motivational-quote">“¡Un paso más cerca de tu meta!”</p>
     </div>
-
-    <script src="../js/avatarData.js"></script>
+    <script src="../js/feedbackSystem.js" defer></script>
     <script src="../js/storage.js"></script>
     <script src="../js/menu.js"></script>
     <script>
@@ -136,3 +135,5 @@
     </script>
 </body>
 </html>
+
+
