--- a/html/logros.html
+++ b/html/logros.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Appli de Léna — Mes Succès</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/logros.css">
+    <link rel="stylesheet" href="../css/feedback-system.css">
     <link rel="stylesheet" href="../css/header-footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="../css/theme-unicorn.css">
@@ -30,12 +30,15 @@
     </div>
 
     <footer data-lena-footer></footer>
+    <script src="../js/feedbackSystem.js" defer></script>
     <script src="../js/appShell.js" defer></script>
     <script src="../js/avatarData.js"></script>
     <script src="../js/storage.js"></script>
     <script src="../js/logros.js"></script>
 </body>
 </html>
+
+
 
 
 
