--- a/html/menu.html
+++ b/html/menu.html
@@ -44,6 +44,7 @@
         <main class="menu-options">
             <a href="juego.html" class="btn-main btn-play">¡A Jugar!</a>
             <a href="logros.html" class="btn-secondary">Mis Logros</a>
+            <a href="les-sorcieres-associe.html" class="btn-secondary">Les Sorcières - Associe les Émojis</a>
             <button class="btn-secondary">Opciones</button>
         </main>
 
