--- a/html/boutique.html
+++ b/html/boutique.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@600;700;900&family=Nunito:wght@600;800&display=swap" rel="stylesheet">
+    <link rel="manifest" href="../manifest.json">
 </head>
 <body class="boutique-body">
     <header data-lena-header></header>
@@ -23,14 +24,39 @@
             <span>Retour au menu</span>
         </button>
 
+        <section class="shop-user-panel" aria-label="Profil et portefeuille">
+            <div id="user-info" class="user-info-card"></div>
+            <div class="wallet-grid" role="status" aria-live="polite">
+                <div class="wallet-item wallet-item--stars">
+                    <span class="wallet-icon" aria-hidden="true">⭐</span>
+                    <span class="wallet-label">Étoiles</span>
+                    <span id="scoreStars" class="wallet-value">0</span>
+                </div>
+                <div class="wallet-item wallet-item--coins">
+                    <span class="wallet-icon" aria-hidden="true">🪙</span>
+                    <span class="wallet-label">Pièces</span>
+                    <span id="scoreCoins" class="wallet-value">0</span>
+                </div>
+            </div>
+        </section>
+
+        <div class="shop-toolbar" role="toolbar" aria-label="Filtres de la boutique">
+            <button type="button" class="filter-btn is-active" data-filter="all">Tout</button>
+            <button type="button" class="filter-btn" data-filter="stickers">Stickers</button>
+            <button type="button" class="filter-btn" data-filter="avatar">Avatars</button>
+            <button type="button" class="filter-btn" data-filter="background">Fonds</button>
+            <button type="button" class="filter-btn" data-filter="sound">Sons</button>
+            <button type="button" class="filter-btn" data-filter="owned">Mes trésors</button>
+        </div>
+
         <div class="shop-header">
-            <h1>🌟 Boutique Magique 🌟</h1>
+            <h1>✨ Boutique Magique ✨</h1>
             <p>Collectionne des trésors scintillants et personnalise ton aventure !</p>
         </div>
 
         <!-- Marché Rare -->
         <div class="shop-section rare-market">
-            <h2>✨ Marché Rare ✨</h2>
+            <h2>🌟 Marché Rare 🌟</h2>
             <div id="rare-items-container" class="items-grid">
                 <!-- Les objets rares sont insérés ici -->
             </div>
@@ -38,7 +64,8 @@
 
         <!-- Boutique Principale -->
         <div class="shop-section">
-            <h2>🎀 Boutique Principale 🎀</h2>
+            <h2>🛍️ Boutique Principale 🛍️</h2>
+            <p class="shop-section__subtitle">Parcourir tous les accessoires magiques disponibles aujourd'hui.</p>
             <div id="shop-items-container" class="items-grid">
                 <!-- Les objets normaux sont insérés ici -->
             </div>
@@ -46,7 +73,8 @@
 
         <!-- Mes Trésors -->
         <div class="shop-section my-treasures">
-            <h2>🌈 Mes Trésors 🌈</h2>
+            <h2>🎁 Mes Trésors 🎁</h2>
+            <p class="shop-section__subtitle">Retrouve ici tous les objets que tu possèdes déjà.</p>
             <div id="my-treasures-container" class="items-grid">
                 <!-- Les objets achetés sont insérés ici -->
             </div>
@@ -63,5 +91,18 @@
     <script src="../js/boutiqueData.js"></script>
     <footer data-lena-footer></footer>
     <script src="../js/boutique.js"></script>
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('../service-worker.js')
+        .then(registration => {
+          console.log('Service Worker registered with scope:', registration.scope);
+        })
+        .catch(error => {
+          console.error('Service Worker registration failed:', error);
+        });
+    });
+  }
+</script>
 </body>
 </html>
