--- a/html/les-sorcieres-associe.html
+++ b/html/les-sorcieres-associe.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Fredoka:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="manifest" href="../manifest.json">
 </head>
 <body>
     <div id="game-container">
@@ -43,5 +44,18 @@
     <script src="../js/audioManager.js"></script>
     <script src="../js/storage.js"></script>
     <script src="../games/les-sorcieres-associe.js"></script>
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('../service-worker.js')
+        .then(registration => {
+          console.log('Service Worker registered with scope:', registration.scope);
+        })
+        .catch(error => {
+          console.error('Service Worker registration failed:', error);
+        });
+    });
+  }
+</script>
 </body>
 </html>
