--- a/html/les-sorcieres.html
+++ b/html/les-sorcieres.html
@@ -54,6 +54,7 @@
       }
     })();
     </script>
+    <link rel="manifest" href="../manifest.json">
 </head>
 <body>
     <div id="game-container">
