--- a/html/login.html
+++ b/html/login.html
@@ -10,9 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@600;700;900&family=Nunito:wght@600;800&display=swap" rel="stylesheet">
+    <link rel="manifest" href="../manifest.json">
 </head>
 <body class="login-body">
-    <header data-lena-header></header>
     <div class="login-orb login-orb--pink"></div>
     <div class="login-orb login-orb--mint"></div>
     <div class="login-orb login-orb--lavender"></div>
@@ -122,12 +122,21 @@
         <span></span><span></span><span></span><span></span>
     </div>
     <script src="../js/feedbackSystem.js" defer></script>
-    <footer data-lena-footer></footer>
-    <script src="../js/appShell.js" defer></script>
     <script src="../js/avatarData.js"></script>
     <script src="../js/storage.js"></script>
     <script src="../js/login.js"></script>
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('../service-worker.js')
+        .then(registration => {
+          console.log('Service Worker registered with scope:', registration.scope);
+        })
+        .catch(error => {
+          console.error('Service Worker registration failed:', error);
+        });
+    });
+  }
+</script>
 </body>
 </html>
-
-
