--- a/html/juego.html
+++ b/html/juego.html
@@ -261,6 +261,7 @@
           { label: 'Maths Sprint', emoji: 0x26A1, aliases: ['Maths Sprint', 'Maths Sprint'] },
           { label: 'Abaque Magique', emoji: 0x1F9EE, aliases: ['Abaque Magique', 'Abaque Magique'] }, // Changed emoji
           { label: 'Maisons des Nombres', emoji: 0x1F3E0, aliases: ['Maisons des Nombres', 'Maisons des Nombres'] },
+          { label: 'Glisser D&U', emoji: '🖐️', aliases: ['Glisser D&U', 'Glisser D&U'] },
           { label: 'Temps & Horloges', emoji: 0x23F0 },
           { label: 'Mesures Magiques', emoji: 0x1F4CF, aliases: ['Mesures Magiques', 'Mesures Magiques'] },
           { label: 'Fractions Fantastiques', emoji: 0x1F355 }
