--- a/login.html
+++ b/login.html
@@ -2,10 +2,11 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=html/login.html">
-    <title>Appli de Léna — Redirection</title>
+    <meta http-equiv="refresh" content="0;url=./html/login.html">
+    <title>App de Léna — Redirection</title>
+    <link rel="canonical" href="html/login.html" />
   </head>
   <body>
-    <p>Redirection vers <a href="html/login.html">html/login.html</a>…</p>
+    <p>Redirection vers <a href="html/login.html">l'application</a>.</p>
   </body>
   </html>
