--- a/html/juego.html
+++ b/html/juego.html
@@ -68,11 +68,12 @@
     </script>
     <title>App de Léna - Monde Magique</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/feedback-system.css">
+    <link rel="stylesheet" href="../css/feedback-system.css"> <!-- New feedback system CSS -->
     <link rel="stylesheet" href="../css/dictee.css">
     <link rel="stylesheet" href="../css/ecriture-cursive.css">
     <link rel="stylesheet" href="../css/header-footer.css">
     <link rel="stylesheet" href="../css/juego.css">
+    <link rel="stylesheet" href="../css/abaque-magique.css">
     <link rel="stylesheet" href="../css/abaque-magique.css">
     <link rel="stylesheet" href="../css/theme-unicorn.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -167,7 +168,7 @@
     }
     </style>
 </head>
-<body class="theme-unicorn-rainbow">
+<body>
   <div class="magic-scene" aria-hidden="true">
     <div class="magic-aurora"></div>
     <div class="magic-cloud magic-cloud--left"></div>
@@ -189,11 +190,6 @@
     <section id="mm-sections" class="mm-sections"></section>
     <div id="content">
       <!-- Game content will be loaded here by JavaScript -->
-    </div>
-    
-    <div id="stageBtns">
-      <button id="btnPrev" class="btn" aria-label="Précédent">Précédent</button>
-      <button id="btnSkip" class="btn" aria-label="Passer">Passer</button>
     </div>
   </div>
 
@@ -261,7 +257,6 @@
           { label: 'Maths Sprint', emoji: 0x26A1, aliases: ['Maths Sprint', 'Maths Sprint'] },
           { label: 'Abaque Magique', emoji: 0x1F9EE, aliases: ['Abaque Magique', 'Abaque Magique'] }, // Changed emoji
           { label: 'Maisons des Nombres', emoji: 0x1F3E0, aliases: ['Maisons des Nombres', 'Maisons des Nombres'] },
-          { label: 'Glisser D&U', emoji: '🖐️', aliases: ['Glisser D&U', 'Glisser D&U'] },
           { label: 'Temps & Horloges', emoji: 0x23F0 },
           { label: 'Mesures Magiques', emoji: 0x1F4CF, aliases: ['Mesures Magiques', 'Mesures Magiques'] },
           { label: 'Fractions Fantastiques', emoji: 0x1F355 }
