--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0;url=html/login.html">
-    <title>Appli de Léna — Redirection</title>
+    <title>App de Léna — Redirection</title>
     <link rel="canonical" href="html/login.html" />
 </head>
 <body>
