store boton funciona

--- a/html/juego.html
+++ b/html/juego.html
@@ -74,7 +74,6 @@
     <link rel="stylesheet" href="../css/header-footer.css">
     <link rel="stylesheet" href="../css/juego.css">
     <link rel="stylesheet" href="../css/abaque-magique.css">
-    <link rel="stylesheet" href="../css/abaque-magique.css">
     <link rel="stylesheet" href="../css/theme-unicorn.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -239,6 +238,7 @@
   <script src="../js/feedbackSystem.js" defer></script>  <script src="../js/appShell.js" defer></script>
   <script src="../js/mcqEngine.js"></script>
   <script src="../js/avatarData.js"></script>
+  <script src="../js/shopManager.js"></script>
   <script src="../js/core/storage.js"></script>
   <script src="../js/storage.js"></script>
   <script src="../js/math/mathEngine.js"></script>
