--- a/html/boutique.html
+++ b/html/boutique.html
@@ -87,8 +87,10 @@
     <script src="../js/feedbackSystem.js" defer></script>
     <script src="../js/appShell.js" defer></script>
     <script src="../js/avatarData.js"></script>
+    <script src="../js/core/storage.js"></script>
     <script src="../js/storage.js"></script>
     <script src="../js/boutiqueData.js"></script>
+    <script src="../js/shopManager.js"></script>
     <footer data-lena-footer></footer>
     <script src="../js/boutique.js"></script>
 <script>
