--- a/html/logros.html
+++ b/html/logros.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Appli de Léna — Mes Succès</title>
+    <title>Appli de Léna - Mes Succès</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/feedback-system.css">
     <link rel="stylesheet" href="../css/header-footer.css">
+    <link rel="stylesheet" href="../css/logros.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="../css/theme-unicorn.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,25 +17,38 @@
 <body class="theme-unicorn-rainbow">
     <header data-lena-header></header>
 
-    <div id="stageBottom">
-        <div id="logros-container">
-            <h1 class="question-prompt">🏆 Mes Succès 🏆</h1>
-            <div id="progress-summary">
-                <p>Étoiles totales: <span id="total-stars">0</span> ⭐️</p>
-                <p>Pièces totales: <span id="total-coins">0</span> 💰</p>
+    <button id="btnVolver" type="button" class="btn-secondary btn-back">
+        <span aria-hidden="true">&#8592;</span>
+        <span>Retour au menu</span>
+    </button>
+
+    <section class="logros-user-panel" aria-label="Profil et portefeuille">
+        <div id="user-info" class="user-info-card"></div>
+        <div class="wallet-grid" role="status" aria-live="polite">
+            <div class="wallet-item wallet-item--stars">
+                <span class="wallet-icon" aria-hidden="true">✨</span>
+                <span class="wallet-label">Étoiles</span>
+                <span id="scoreStars" class="wallet-value">0</span>
             </div>
-            <h2>Niveaux Complétés</h2>
-            <div id="completed-levels" class="logros-grid"></div>
-            <h2>Stickers Collectionnés</h2>
-            <div id="stickers" class="logros-grid"></div>
+            <div class="wallet-item wallet-item--coins">
+                <span class="wallet-icon" aria-hidden="true">🪙</span>
+                <span class="wallet-label">Pièces</span>
+                <span id="scoreCoins" class="wallet-value">0</span>
+            </div>
         </div>
+    </section>
+
+    <div id="stageBottom">
+        <div id="logros-container" class="logros-container"></div>
     </div>
 
     <footer data-lena-footer></footer>
     <script src="../js/feedbackSystem.js" defer></script>
     <script src="../js/appShell.js" defer></script>
     <script src="../js/avatarData.js"></script>
+    <script src="../js/core/storage.js"></script>
     <script src="../js/storage.js"></script>
+    <script src="../js/boutiqueData.js"></script>
     <script src="../js/logros.js"></script>
 <script>
   if ('serviceWorker' in navigator) {
@@ -51,8 +65,3 @@
 </script>
 </body>
 </html>
-
-
-
-
-
