--- a/html/grande-aventure-mots/histoire-interactive/niveau1/index.html
+++ b/html/grande-aventure-mots/histoire-interactive/niveau1/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../../../../css/grande-aventure-mots.css" />
 </head>
 <body>
+  <header data-lena-header></header>
   <main class="main-shell" role="main">
     <div class="top-bar">
       <h1 class="top-bar__title"><span>🟣</span>Histoire interactive - Niveau 1</h1>
@@ -20,5 +21,6 @@
       Cette activité sera bientôt disponible pour Léna. Reviens très vite pour découvrir de nouveaux défis du langage.
     </section>
   </main>
+  <footer data-lena-footer></footer>
 </body>
 </html>
