--- a/html/grande-aventure-mots/remets-histoire-en-ordre/index.html
+++ b/html/grande-aventure-mots/remets-histoire-en-ordre/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../../../css/grande-aventure-mots.css" />
 </head>
 <body>
+  <header data-lena-header></header>
   <main class="main-shell" role="main">
     <div class="top-bar">
       <h1 class="top-bar__title"><span>📚</span>Remets l’histoire en ordre</h1>
@@ -40,5 +41,6 @@
       });
     });
   </script>
+  <footer data-lena-footer></footer>
 </body>
 </html>
