--- a/html/grande-aventure-mots/remets-histoire-en-ordre/play.html
+++ b/html/grande-aventure-mots/remets-histoire-en-ordre/play.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../../../css/grande-aventure-mots.css" />
 </head>
 <body>
+  <header data-lena-header></header>
   <main class="main-shell" role="main">
     <div class="top-bar">
       <h1 class="top-bar__title" id="levelTitle"><span>📚</span>Remets l’histoire en ordre</h1>
@@ -39,5 +40,6 @@
   <script src="../common.js"></script>
   <script src="levels.js"></script>
   <script src="play.js"></script>
+  <footer data-lena-footer></footer>
 </body>
 </html>
