--- a/html/grande-aventure-mots/rimes-magiques/niveau1/index.html
+++ b/html/grande-aventure-mots/rimes-magiques/niveau1/index.html
@@ -6,6 +6,8 @@
   <title>Rimes magiques – Redirection</title>
 </head>
 <body>
+  <header data-lena-header></header>
   <p>Redirection vers le nouveau niveau… Si rien ne se passe, <a href="../play.html?level=niveau1">clique ici</a>.</p>
+  <footer data-lena-footer></footer>
 </body>
 </html>
