--- a/html/grande-aventure-mots/trouve-le-mot/index.html
+++ b/html/grande-aventure-mots/trouve-le-mot/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../../../css/grande-aventure-mots.css" />
 </head>
 <body>
+  <header data-lena-header></header>
   <main class="main-shell" role="main">
     <div class="top-bar">
       <h1 class="top-bar__title"><span>🎯</span>Trouve le mot</h1>
@@ -154,5 +155,9 @@
 
     document.addEventListener('DOMContentLoaded', applyProgress);
   </script>
+  <script src="../common.js"></script>
+  <footer data-lena-footer></footer>
 </body>
 </html>
+
+
