--- a/html/juego.html
+++ b/html/juego.html
@@ -281,6 +281,7 @@
         title: 'Mots & Lecture', emoji: 0x1F4D6, color: '#F5A623',
         items: [
           { label: 'Lecture Magique', emoji: 0x1F4D8 },
+          { label: 'La Grande Aventure des Mots', emoji: 0x1F524, aliases: ['La Grande Aventure des Mots', 'Grande Aventure des Mots'] },
           { label: 'Mots-Outils', emoji: 0x1F5E3, aliases: ['Mots-Outils', 'Mots-Outils'] },
           { label: 'Jeu des Voyelles', emoji: 0x1F170, aliases: ['Jeu des Voyelles', 'Jeu des Voyelles'] },
           { label: 'Les Sorcières — Jeu de Mémoire Magique', emoji: 0x1F9D9, aliases: ['Les Sorcières — Jeu de Mémoire Magique', 'Les Sorcières'] },
