--- a/html/grande-aventure-mots/complete-la-phrase/index.html
+++ b/html/grande-aventure-mots/complete-la-phrase/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../../../css/grande-aventure-mots.css" />
 </head>
 <body>
+  <header data-lena-header></header>
   <main class="main-shell" role="main">
     <div class="top-bar">
       <h1 class="top-bar__title"><span>🧩</span>Complète la phrase</h1>
@@ -41,5 +42,6 @@
       });
     });
   </script>
+  <footer data-lena-footer></footer>
 </body>
 </html>
