--- a/html/grande-aventure-mots/index.html
+++ b/html/grande-aventure-mots/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../../css/grande-aventure-mots.css" />
 </head>
 <body>
+  <header data-lena-header></header>
   <main class="main-shell" role="main">
     <div class="top-bar">
       <h1 class="top-bar__title"><span>🟣</span>La Grande Aventure des Mots</h1>
@@ -84,5 +85,6 @@
     </section>
   </main>
   <script src="common.js"></script>
+  <footer data-lena-footer></footer>
 </body>
 </html>
