--- a/html/grande-aventure-mots/trouve-le-mot/niveau7/index.html
+++ b/html/grande-aventure-mots/trouve-le-mot/niveau7/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../../../../css/grande-aventure-mots.css" />
 </head>
 <body>
+  <header data-lena-header></header>
   <main class="main-shell" role="main">
     <div class="top-bar">
       <h1 class="top-bar__title"><span>🎯</span>Trouve le mot – Niveau 7</h1>
@@ -58,5 +59,6 @@
     };
   </script>
   <script src="../level.js"></script>
+  <footer data-lena-footer></footer>
 </body>
 </html>
